# wagtail-starter

./: .gitignore  README.md  pyproject.toml  tox.ini
src/: .env.example
src/core/: settings.py  urls.py
src/users/: forms.py  models.py  signals.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
